--- a/doc/config.tex
+++ b/doc/config.tex
@@ -1,10 +1,10 @@
 \newcommand{\university}{Национальный исследовательский Университет ИТМО}
-\newcommand{\mfaculty}{Мегафакультет информационных и трансляционных технологий}
-\newcommand{\faculty}{Факультет инфокоммуникационных технологий}
+\newcommand{\mfaculty}{Мегафакультет компьютерных технологий и управления}
+\newcommand{\faculty}{Факультет программной инженерии и компьютерной техники}
 \newcommand{\city}{Санкт-Петербург}
-\newcommand{\num}{ №1}
-\newcommand{\docname}{Лабораторная работа}
-\newcommand{\subject}{Название предмета}
-\newcommand{\tutorname}{И.О. Фамилия}
-\newcommand{\studentname}{И.О. Фамилия}
-\newcommand{\group}{Группа}
+\newcommand{\num}{}
+\newcommand{\docname}{Курсовой проект}
+\newcommand{\subject}{Информационные системы и базы данных}
+\newcommand{\tutorname}{Д.\,М. Шешуков}
+\newcommand{\studentname}{Н.\,В. Кулаков, Н.\,К. Нестеров}
+\newcommand{\group}{P33312}
