Add first stage filling, Update titlepage

--- a/doc/templates/titlepage.tex
+++ b/doc/templates/titlepage.tex
@@ -15,13 +15,14 @@
 
 
 	\begin{flushright} % выравнивание по правому краю
-		\begin{minipage}{0.25\textwidth} % врезка в половину ширины текста
+		\begin{minipage}{0.27\textwidth} % врезка в половину ширины текста
 			\begin{flushleft} % выровнять её содержимое по левому краю
 
-				\large\textbf{Работу выполнил:}\\
+				\large\textbf{Работу выполнили:}\\
 				\large \studentname \\
 				\large {Группа:} \group \\
 
+        \medskip
 				\large \textbf{Преподаватель:}\\
 				\large \tutorname
 
