--- a/doc/main.tex
+++ b/doc/main.tex
@@ -14,6 +14,7 @@
 \begin{document}
   \include{templates/titlepage}
   \include{templates/tocpage}
-  \markdownInput{content.md}
+  \markdownInput{01-input.md}
+  \input{02-input.tex}
   % \include{templates/bibpage}
 \end{document}
