--- a/doc/settings/preferences.tex
+++ b/doc/settings/preferences.tex
@@ -53,7 +53,7 @@
 \captionsetup[table]{format=hfillstart,labelsep=newline,justification=centering,skip=-10pt,textfont=bf}
 
 % Path for graphics
-\graphicspath{{fig/}}
+\graphicspath{{.}}
 
 % Include titlepage in page counter
 \makeatletter
@@ -73,4 +73,3 @@
 
 % % Markdown
 \def\markdownOptionOutputDir{build}
-
