doc: Add svg support

--- a/doc/settings/packages.tex
+++ b/doc/settings/packages.tex
@@ -8,6 +8,7 @@
 % Graphics
 \usepackage{graphicx}
 \usepackage{tikz}
+% \usepackage{svg} % inkscape required
 
 % Page rotation
 \usepackage{pdflscape}
