os.lab2: Add pdf

--- a/Year-3/Operating-systems/lab-2/doc/main.tex
+++ b/Year-3/Operating-systems/lab-2/doc/main.tex
@@ -33,7 +33,7 @@
     linkcolor=blue,
     filecolor=magenta,      
     urlcolor=blue,
-    pdftitle={Overleaf Example},
+    pdftitle={Nikita-Kulakov.os.lab2},
     pdfpagemode=FullScreen,
 }
 \VerbatimFootnotes % Required, otherwise verbatim does not work in footnotes!
