doc: Update scheme in second part

--- a/doc/src/main.tex
+++ b/doc/src/main.tex
@@ -16,5 +16,6 @@
   \include{templates/tocpage.tex}
   \markdownInput{src/01-input.md}
   \input{src/02-input.tex}
+  \markdownInput{src/03-input.md}
   % \include{templates/bibpage.tex}
 \end{document}
