doc: Add lstlisting SQL template, Update 03-input.md -> 03-input.tex

--- a/doc/settings/preferences.tex
+++ b/doc/settings/preferences.tex
@@ -13,6 +13,7 @@
 % Main font
 \setmainfont{CMU Serif}
 \newfontfamily\cyrillicfont{CMU Serif}[Script=Cyrillic]
+\newfontfamily{\codefamily}{FiraCode Nerd Font Mono}[Scale=.9]
 
 % List of sources used
 % \addbibresource{refs.bib}
