--- a/doc/src/main.tex
+++ b/doc/src/main.tex
@@ -7,6 +7,7 @@
 % Packages
 \include{settings/packages.tex}
 \include{settings/preferences.tex}
+\include{settings/listings.tex}
 
 % Language settigns
 % \include{settings/language.tex}
@@ -16,6 +17,6 @@
   \include{templates/tocpage.tex}
   \markdownInput{src/01-input.md}
   \input{src/02-input.tex}
-  \markdownInput{src/03-input.md}
+  \input{src/03-input.tex}
   % \include{templates/bibpage.tex}
 \end{document}
