backend: Rename sql files (#1)

--- a/doc/src/03-input.tex
+++ b/doc/src/03-input.tex
@@ -30,18 +30,34 @@
 
 ### Таблицы
 \end{markdown}
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {create-functions.sql}
+  ]{../../backend/sql/create-scheme.sql}
 
 \begin{markdown}
 ### Функции
 \end{markdown}
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {create-functions.sql}
+  ]{../../backend/sql/create-functions.sql}
 
 \begin{markdown}
 ### Триггеры
 \end{markdown}
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {create-triggers}
+  ]{../../backend/sql/create-triggers.sql}
 
 \begin{markdown}
 ### Процедуры
 \end{markdown}
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {create-procedures}
+  ]{../../backend/sql/create-procedures.sql}
 
 \begin{markdown}
 ## Удаление объектов
@@ -50,17 +66,26 @@
 \end{markdown}
 \lstinputlisting[
   style = User-SQL,
-  caption = {Output}
-  ]{../../backend/sql/create-objects.sql}
+  % caption = {drop-scheme}
+  ]{../../backend/sql/drop-scheme.sql}
 
 \begin{markdown}
 ### Функции
 \end{markdown}
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {drop-functions}
+  ]{../../backend/sql/drop-functions.sql}
 
 \begin{markdown}
 ### Процедуры
 \end{markdown}
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {drop-procedures}
+  ]{../../backend/sql/drop-procedures.sql}
 
 \begin{markdown}
 ## Скрипты
 \end{markdown}
+
