backend: Add initial values

--- a/doc/src/03-input.tex
+++ b/doc/src/03-input.tex
@@ -4,7 +4,7 @@
 ## Запросы
 
 ### Для администраторов системы
-* Редактирование доступных едениц измерения
+* Редактирование доступных единиц измерения
 * Редактирование доступных ингредиентов
 
 ### Для поставщика
@@ -97,5 +97,15 @@
   ]{../../backend/sql/ddl/drop-functions.sql}
 
 \begin{markdown}
-## Запросы
+## Начальные значения
 \end{markdown}
+
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {drop-functions}
+  ]{../../backend/sql/init.sql}
+
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {drop-functions}
+  ]{../../backend/sql/destroy.sql}
