backend: Add all queries from 3.1 in doc and create functions and procedures

--- a/doc/src/03-input.tex
+++ b/doc/src/03-input.tex
@@ -81,14 +81,56 @@
 
 \begin{markdown}
 ## Начальные значения
-\end{markdown}
 
+### Создание
+\end{markdown}
 \lstinputlisting[
   style = User-SQL,
   % caption = {drop-functions}
   ]{../../backend/sql/init.sql}
 
+\begin{markdown}
+### Удаление
+\end{markdown}
 \lstinputlisting[
   style = User-SQL,
   % caption = {drop-functions}
   ]{../../backend/sql/destroy.sql}
+
+\begin{markdown}
+## Примеры запросов выше
+
+### Администратор
+\end{markdown}
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {drop-functions}
+  ]{../../backend/sql/req/admin.sql}
+
+\begin{markdown}
+### Поставщик
+\end{markdown}
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {drop-functions}
+  ]{../../backend/sql/req/supplier.sql}
+
+\begin{markdown}
+### Владельцы
+\end{markdown}
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {drop-functions}
+  ]{../../backend/sql/req/owner.sql}
+
+\begin{markdown}
+### Пользователи
+\end{markdown}
+\lstinputlisting[
+  style = User-SQL,
+  % caption = {drop-functions}
+  ]{../../backend/sql/req/user.sql}
+
+\begin{markdown}
+## Индексы
+\end{markdown}
