backend, doc: Add indexes

--- a/doc/settings/listings.tex
+++ b/doc/settings/listings.tex
@@ -45,3 +45,22 @@
   tabsize=2,
   language=SQL
 }
+
+\lstdefinestyle{User-output}
+{
+  backgroundcolor=\color{backgroundColour},   
+  commentstyle=\color{mGreen},
+  keywordstyle=\color{magenta},
+  numberstyle=\tiny\color{mGray},
+  stringstyle=\color{mPurple},
+  basicstyle=\footnotesize\codefamily\selectfont,
+  breakatwhitespace=false,         
+  breaklines=true,                 
+  captionpos=b,                    
+  keepspaces=true,                 
+  numbers=none,                    
+  showspaces=false,                
+  showstringspaces=false,
+  showtabs=false,                  
+  tabsize=2,
+}
