--- a/doc/settings/preferences.tex
+++ b/doc/settings/preferences.tex
@@ -12,8 +12,11 @@
 
 % Main font
 \setmainfont{CMU Serif}
-\newfontfamily\cyrillicfont{CMU Serif}[Script=Cyrillic]
-\newfontfamily{\codefamily}{FiraCode Nerd Font Mono}[Scale=.9]
+\newfontfamily{\cyrillicfont}{CMU Serif}[Script=Cyrillic]
+
+\newfontfamily{\codefamily}{FiraCode Nerd Font Mono}[Scale=.9,Script=Cyrillic]
+\setmonofont{FiraCode Nerd Font Mono}[Scale=.8]
+% \newfontfamily{\cyrillicfonttt}{FiraCode Nerd Font Mono}[Scale=.9,Script=Cyrillic]
 
 % List of sources used
 % \addbibresource{refs.bib}
