doc: Update doc

--- a/doc/src/03-input.tex
+++ b/doc/src/03-input.tex
@@ -147,7 +147,7 @@
   \item \Verb"ingredients(name)" - gin. Поиск ингредиента по паттерну.
 \end{itemize}
 
-Однако поскольку вылетает ошибка при попытке создания gin и мы не имеем достаточными правами доступа к дб, чтобы ее исправить, то обойдемся btree. Описание ошибки:
+Однако поскольку вылетает ошибка при попытке создания gin и мы не имеем достаточными правами доступа к дб, чтобы ее исправить, то обойдемся hash. Описание ошибки:
 
 \begin{lstlisting}[
   style = User-output
