doc: add description

--- a/doc/src/main.tex
+++ b/doc/src/main.tex
@@ -18,5 +18,6 @@
   \markdownInput{src/01-input.md}
   \input{src/02-input.tex}
   \input{src/03-input.tex}
+  \input{src/04-input.tex}
   % \include{templates/bibpage.tex}
 \end{document}
